--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,9 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'androidx.games:games-activity:1.1.0'
     implementation 'androidx.privacysandbox.tools:tools-core:+'
-
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.21'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.21' // or kotlin-stdlib-jdk8:1.8.21
+    // other dependencies
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.21'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.20'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.20'
